Add page, article and category templates

--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <ul class="pagination justify-content-center py-4">
+  <ul class="pagination justify-content-center pt-4">
     {% if articles_page.has_previous() %}
       <li class="page-item">
         <a class="page-link" href="{{ SITEURL }}/{{ articles_previous_page.url }}">&laquo;</a>
