--- a/templates/base.html
+++ b/templates/base.html
@@ -41,15 +41,15 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <div class="container">
 
         <a class="navbar-brand" href="{{ SITEURL }}">{{ SITENAME | upper }}</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor03">
+        <div class="collapse navbar-collapse" id="navbarColor02">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item ml-3">
               <a href="{{ SITEURL }}" class="nav-link" title="Home">HOME</a>
@@ -111,13 +111,21 @@
       </div>
     </nav>
     
-    <!-- <div class="container"> -->
-      <!-- Content -->
-      <article>
-        {% block content %}
-        {% endblock %}
-      </article>
-    <!-- </div> -->
+    <!-- Content -->
+    {% block title %}{% endblock %}
+    <div class="container py-5">
+      {% block content %}{% endblock %}
+    </div>
+
+    <footer>
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <div class="container py-1">
+          <div class="collapse navbar-collapse lead" id="navbarColor02">
+            <div class="mx-auto">{{ SITENAME }} © 2018</div>
+          </div>
+        </div>
+      </nav>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
