--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block head %}
   {{ super() }}
+  
   <meta name="twitter:creator" content="{{ TWITTER_USERNAME }}">
   <meta name="twitter:url" content="{{ SITEURL }}">
   <meta name="twitter:title" content="{{ SITENAME }}">
@@ -10,15 +11,12 @@
   <!-- Facebook Meta Data -->
   <meta property="og:title" content="{{ SITENAME }}"/>
   <meta property="og:description" content="{{ SITEDESCRIPTION }}"/>
-  <meta property="og:image" content=""/>
+  <meta property="og:image" content="{{ AVATAR }}"/>
 {% endblock head %}
 
-{% block content_title %}{% endblock %}
-
-{% block content %}
-
+{% block title %}
   {% if not articles_page.has_previous() %}
-    <div class="container py-4">
+    <div class="container pt-5">
       <div class="jumbotron" id="header-background">
         <h1 class="text-center display-4">{{ SITENAME }} — {{ SITEDESCRIPTION }}</h1>
         <hr class="m-5" />
@@ -29,26 +27,37 @@
     </div>
   {% endif %}
 
-  <div class="container">
-    <div class="row">
-      {% if articles %}
-        {% for article in (articles_page.object_list if articles_page else articles) %}
-          <div class="col-12 col-lg-4">
-            <div class="card">
-              <div class="card-body">
-                <h2 class="card-title"><a href="{{ SITEURL }}/{{ article.url }}" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
-                {% if DISPLAY_SUMMARY and article.summary|length > 0 %}
-                  <p class="card-text">{{ article.summary }}</p>
-                {% endif %}
-                <a class="card-link" href="{{ SITEURL }}/{{ article.author.url }}">@{{ article.author }}</a> in <a class="card-link" href="{{ SITEURL }}/{{ article.category.url }}" title="Permalink to {{ article.category|striptags }}">[ {{ article.category }} ]</a> {{ article.locale_date }}
-              </div>
+  <div class="container pt-5">
+    <div class="card">
+        <div class="card-header">
+          {% if articles_page.has_previous() %}
+            <h1 class="text-center display-4">Latest posts — page {{ articles_page.number }}</h1>
+          {% else %}
+            <h1 class="text-center display-4">Latest posts</h1>
+          {% endif %}
+        </div>
+      </div>
+  </div>
+{% endblock title %}
+
+{% block content %}
+  <div class="row">
+    {% if articles %}
+      {% for article in (articles_page.object_list if articles_page else articles) %}
+        <div class="col-12 col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title"><a href="{{ SITEURL }}/{{ article.url }}" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
+              {% if DISPLAY_SUMMARY and article.summary|length > 0 %}
+                <p class="card-text">{{ article.summary }}</p>
+              {% endif %}
+              <a class="card-link" href="{{ SITEURL }}/{{ article.author.url }}">@{{ article.author }}</a> in <a class="card-link" href="{{ SITEURL }}/{{ article.category.url }}" title="Permalink to {{ article.category|striptags }}">[ {{ article.category }} ]</a> {{ article.locale_date }}
             </div>
           </div>
-        {% endfor %}
-      {% endif %}
-    </div>
+        </div>
+      {% endfor %}
+    {% endif %}
   </div>
-
+    
   {% include 'pagination.html' %}
-  
 {% endblock content %}
