Add Font Awesome and modify templates

--- a/templates/page.html
+++ b/templates/page.html
@@ -19,8 +19,8 @@
     <h1 class="display-4 text-center">{{ page.title }}</h1>
 
     <hr class="m-5" />
-      
-    <div class="lead">
+    
+    <div class="lead text-justify">
       {{ page.content }}
     </div>
   </div>
