--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" type="text/css"/>
       <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css" type="text/css"/>
       <link rel="stylesheet" href="{{ SITEURL }}/theme/css/main.css" type="text/css"/>
+      <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font-awesome.min.css" type="text/css"/>
 
       <!-- Atom feed metadata -->
       {% if FEED_ALL_ATOM %}
@@ -33,9 +34,6 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
-
-      <!-- Feather icons script -->
-      <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 
     {% endblock %}
   </head>
@@ -83,7 +81,7 @@
               {% for name, icon, link in LINKS %}
                 <li class="nav-item ml-3">
                   <a href="{{ link }}" class="nav-link" title="{{ name }}">
-                    <i data-feather="{{ icon }}"></i>
+                    <i class="fa fa-{{ icon }}" aria-hidden="true"></i>
                   </a>
                 </li>
               {% endfor %}
@@ -92,7 +90,7 @@
               {% if FEED_ALL_ATOM %}
                 <li class="nav-item ml-3">
                   <a href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}" class="nav-link" title="Atom feed">
-                    <i data-feather="rss"></i>
+                    <i class="fa fa-rss" aria-hidden="true"></i>
                   </a>
                 </li>
               {% endif %}
@@ -101,7 +99,7 @@
               {% if FEED_ALL_RSS %}
                 <li class="nav-item ml-3">
                   <a href="{{ SITEURL }}/{{ FEED_ALL_RSS }}" class="nav-link" title="RSS feed">
-                    <i data-feather="rss"></i>
+                    <i class="fa fa-rss" aria-hidden="true"></i>
                   </a>
                 </li>
               {% endif %}
@@ -130,6 +128,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
-    <script>feather.replace()</script>
   </body>
 </html>
