--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,3 +21,31 @@
 .highlight pre {
   padding: 1em;
 }
+
+/* CAROUSEL */
+
+/* Carousel base class */
+.carousel {
+  margin-top: 4rem;
+}
+
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 4rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 24rem;
+  background-color: black;
+}
+
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+  opacity: 0.5;
+}
