--- a/templates/page.html
+++ b/templates/page.html
@@ -20,7 +20,7 @@
 
     <hr class="m-5" />
     
-    <div class="lead text-justify">
+    <div class="container lead text-justify">
       {{ page.content }}
     </div>
   </div>
