--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
 
         <a class="navbar-brand" href="{{ SITEURL }}">{{ SITENAME | upper }}</a>
